bk_ida/gccida/c1/split_3
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/split_3/src/insn-recog.c:53734:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[0] = ( rtx)v4; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/split_3/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/split_3/src/insn-recog.c:53744:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[1] = v39; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/split_3/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/split_3/src/insn-recog.c:53748:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[2] = v40; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/split_3/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/split_3/src/insn-recog.c:53756:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[3] = v42; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/split_3/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/split_3/src/insn-recog.c:53760:40: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( rtx_equal_p( *( rtx *)( v43 + 8), recog_data_0.operand[1]) ) 
                                       ^~~~~~~~~~~~
                                       recog_data
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/split_3/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/split_3/src/insn-recog.c:53762:42: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
v44 = rtx_equal_p( *( rtx *)( v43 + 16), recog_data_0.operand[2]); 
                                         ^~~~~~~~~~~~
                                         recog_data
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/split_3/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/split_3/src/insn-recog.c:53771:24: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
return gen_split_1003( recog_data_0.operand); 
                       ^~~~~~~~~~~~
                       recog_data
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/split_3/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/split_3/src/insn-recog.c:53786:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[1] = v7; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/split_3/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/split_3/src/insn-recog.c:53790:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[2] = v8; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/split_3/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/split_3/src/insn-recog.c:53798:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[3] = v11; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/split_3/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/split_3/src/insn-recog.c:53802:40: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( rtx_equal_p( *( rtx *)( v12 + 8), recog_data_0.operand[1]) ) 
                                       ^~~~~~~~~~~~
                                       recog_data
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/split_3/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/split_3/src/insn-recog.c:53804:42: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
v13 = rtx_equal_p( *( rtx *)( v12 + 16), recog_data_0.operand[2]); 
                                         ^~~~~~~~~~~~
                                         recog_data
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/split_3/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/split_3/src/insn-recog.c:53813:24: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
return gen_split_1005( recog_data_0.operand); 
                       ^~~~~~~~~~~~
                       recog_data
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/split_3/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/split_3/src/insn-recog.c:53827:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[0] = ( rtx)v4; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/split_3/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/split_3/src/insn-recog.c:53834:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[1] = v19; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/split_3/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/split_3/src/insn-recog.c:53850:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[2] = v24; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/split_3/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/split_3/src/insn-recog.c:53852:25: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
&& dead_or_set_p( insn, recog_data_0.operand[1]) 
                        ^~~~~~~~~~~~
                        recog_data
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/split_3/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/split_3/src/insn-recog.c:53853:22: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
&& !reg_mentioned_p( recog_data_0.operand[1], recog_data_0.operand[0]) ) 
                     ^~~~~~~~~~~~
                     recog_data
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/split_3/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/split_3/src/insn-recog.c:53853:47: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
&& !reg_mentioned_p( recog_data_0.operand[1], recog_data_0.operand[0]) ) 
                                              ^~~~~~~~~~~~
                                              recog_data
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/split_3/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/split_3/src/obj/insn-recog.o] Error 1
